# Python

./: .coverage  .flake8  .gitignore  .gitpod.yml  .mergify.yml  .pre-commit-config.yaml  .pylintrc  BASIC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY.md  LICENSE  README.md  calculator.py  coverage.xml  dev-requirements.txt  kalkulator  kalkulator.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  update.md
.circleci/: config.yml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  reviewers.yml
Basic/: Introduction.py  Operator.py  README.md  String.py  Variable.py  casting_tipe_data.py  dict_comprehension.py  input_output.py  list_comprehension.py  tambahPython.py
algoritma_genetika/: basic_string.py
arithmetic_analysis/: bisection.py  gaussian_elimination.py  in_static_equilibrium.py  intersection.py  lu_decomposition.py  newton_forward_interpolation.py  newton_method.py  newton_raphson.py
backtracking/: README.md  combination.py  hamilton_cycle.py  minimax.py  n_queens.py  permutation.py  rat_in_maze.py  subsequence.py  sudoku.py
boolean_algebra/: quinc_mc_cluskey.py
celular_automata/: one_dimensional.py
chiper/: README.md  affine.py  base64.py  caesar.py  playfair.py
compression/: burrows_wheeler.py
conversion/: binary_to_octal.py  binary_to_string.py  temperature_conversion.py
divide_and_conquer/: closest_pair_of_points.py  kth_order_statistic.py  max_difference_pair.py  max_subarray_sum.py
file_transfer/: send_file.py  textfile.txt
fractal/: koch.py  sierpinski_triangle.py
fuzzy_logic/: fuzzy_operation.py
genetic_algo/: basic_string.py
geodesy_egineering/: ellipsodial_distance.py
(+480 files in other folders)
