[project]
name = "python-bellshade"
version = "1.0.0"
description = "Repositori untuk belajar pemograman dalam bahasa indonesia"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4",
  "fake_useragent",
  "keras",
  "lxml",
  "matplotlib",
  "numpy",
  "opencv-python",
  "pandas",
  "pillow",
  "pre-commit>=4.1.0",
  "projectq",
  "pytest>=9.0.1",
  "qiskit",
  "requests",
  "scikit-fuzzy",
  "scikit-learn",
  "statsmodels",
  "sympy",
  "tensorflow",
  "types-requests",
  "xgboost",
]
